--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,2 +1,38 @@
-<h1>Public::Homes#about</h1>
-<p>Find me in app/views/public/homes/about.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-10 mx-auto">
+      <h1 class="text-center">PawHantについて</h1>
+      <h6 class="text-center mt-3">
+        PawHant（パウハント）は、迷子のペットや保護されたペットが<br>
+        早く飼い主の元に戻れるように支援するプラットフォームです。<br>
+        "Paw"（足）と"Hunt"（探す）からなる名前には、ペットと飼い主を繋ぐこと、そしてペットの早期発見をサポートする使命が込められています。<br>
+        ペットを飼っている方へ
+
+PawHantは、大切なペットを失くしてしまったり、保護したりした方々に対する心強い味方です。サイト上で迷子のペット情報を共有し、ペットの発見に向けて協力できます。また、ペットの安全と健康を守るために役立つ情報も提供しています。
+
+ペットを飼っていない方へ
+
+ペットを飼っていない方も、PawHantに参加できます。迷子のペット情報へのアクセスや保護活動への参加、通知機能の利用など、ペット愛好者のコミュニティに参加し、一緒にペットの安全を支えることができます。
+
+通知機能
+
+PawHantでは、ペットの迷子情報や保護情報を瞬時に共有するための通知機能を提供しています。飼い主と探し手、そしてペットを愛する全ての人々が、ペットの早期発見と安全な帰還をサポートします。
+
+PawHantは、ペットと飼い主の絆を大切にし、コミュニティの力でペットの安全を守ります。一緒にペットを支え、幸せな再会を実現しましょう。
+
+参加してみませんか？
+
+PawHantへの参加は無料です。ペット愛好者、飼い主、探し手、保護者、皆さんが一堂に会する場所です。ぜひ今すぐ参加し、ペットたちと飼い主たちに希望をもたらしましょう。
+
+PawHantでペットの安全と幸せをサポートしましょう。
+      </h6>
+      <div class="text-center mt-3">
+        <%= image_tag 'beach.jpg', class:"w-50 h-50" %>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
