--- a/app/views/public/groups/show.html.erb
+++ b/app/views/public/groups/show.html.erb
@@ -21,9 +21,9 @@
             <td><%= @group.name %></td>
             <td><%= @group.introduction %></td>
             <td>
-              <% @group.group_members.each do |group_member| %>
+              <% @customers.each do |customer| %>
 　　            <li style="list-style: none;">
-　　            <%= link_to group_member.customer.name, customer_path(@customer) %>
+　　            <%= link_to customer.name, customer_path(customer) %>
 　　            </li>
               <% end %>
             </td>
