--- a/app/views/admin/groups/index.html.erb
+++ b/app/views/admin/groups/index.html.erb
@@ -1,1 +1,9 @@
-admin/groups#index
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class="col-md-8">
+      <h2>グループ一覧</h2>
+    </div>
+      <%= render 'index', groups: @groups %>
+    </div>
+  </div>
+</div>
