--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,2 +1,25 @@
-<h1>Admin::Homes#top</h1>
-<p>Find me in app/views/admin/homes/top.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="d-flex align-items-center">
+        <h4>迷子情報一覧</h4>
+        <div class="ml-3">
+          <% if customer_signed_in? %>
+            <%= link_to "迷子・保護情報を登録", new_pet_post_path, class:"btn btn-outline-danger mb-2" %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+          <% @pet_posts.each do |pet_post| %>
+              <%= render 'admin/pet_posts/list', pet_post: pet_post, tag_list: @tag_list %>
+          <% end %>
+        </div>
+      </div>
+    <div class="mx-auto mt-3">
+        <%= paginate @pet_posts %>
+    </div>
+  </div>
+</div>
+
