--- a/app/views/public/customer_pets/edit.html.erb
+++ b/app/views/public/customer_pets/edit.html.erb
@@ -1,2 +1,12 @@
-<h1>Public::CustomersPets#edit</h1>
-<p>Find me in app/views/public/customers_pets/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 sm-5">
+      <h4 class="my-3 ml-4">ペット情報編集</h4>
+      <%= form_with model: @customer_pet, url: customer_pet_path(@customer_pet), method: :patch do |f| %>
+        <%#= render 'layouts/error', obj: @customer_pet %>
+        <%= render 'form', customer: @customer, customer_pet: @customer_pet, f: f  %>
+      <% end %>
+      <%= link_to "削除する", customer_pet_path(@customer, @customer_pet), method: :delete, class: "btn btn-outline-info" %>
+    </div>
+  </div>
+</div>
