--- a/app/views/public/customer_pets/new.html.erb
+++ b/app/views/public/customer_pets/new.html.erb
@@ -2,8 +2,10 @@
   <div class="row">
     <div class="col-md-10 sm-5">
       <h4 class="my-3 ml-4">ペット情報新規登録</h4>
+      <%= form_with model: @customer_pet, url: customer_pets_path, method: :post do |f| %>
       <%= render 'layouts/error', obj: @customer_pet %>
-      <%= render 'form', customer: @customer, customer_pet: @customer_pet %>
+      <%= render 'form', customer: @customer, customer_pet: @customer_pet, f: f %>
+      <% end %>
     </div>
   </div>
 </div>
