--- a/app/views/public/pet_posts/tag_search.html.erb
+++ b/app/views/public/pet_posts/tag_search.html.erb
@@ -2,13 +2,13 @@
   <div class="row">
     <div class="col">
         <div class="d-flex align-items-center">
-          <h4 class="my-2">保護情報一覧</h4>
+          <h4 class="my-2"><%= "##{@tag.tag_name}" %> の検索結果一覧</h4>
         </div>
       </div>
       <div class="container">
           <div class="row">
               <% @pet_posts.each do |pet_post| %>
-                    <%= render 'list', pet_post: pet_post %>
+                  <%= render 'public/pet_posts/list', pet_post: pet_post %>
               <% end %>
           </div>
       </div>
