--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -3,9 +3,8 @@
     <div class="col-md-6 sm-10">
       <h4><%= @customer.name %>さんの詳細ページ</h4>
       <div class="py-3">
-        <%= link_to "参加しているグループ一覧", groups_path, class:"btn btn-outline-secondary" %>
-        <%= link_to "いいねした投稿", pet_posts_path, class:"btn btn-outline-secondary pt-2" %>
-        <%= link_to "自分の投稿", pet_posts_path, class:"btn btn-outline-secondary pt-2" %>
+        <%= link_to "リアクションした投稿", customer_customers_sighting_pet_posts_path(@customer), class:"btn btn-outline-secondary pt-2" %>
+        <%= link_to "#{@customer.name} さんの投稿", pet_posts_path, class:"btn btn-outline-secondary pt-2" %>
       </div>
       <% if current_customer == @customer %>
         <%=render 'info', customer:  @customer %>
