--- a/app/views/public/pet_posts/_form.html.erb
+++ b/app/views/public/pet_posts/_form.html.erb
@@ -15,6 +15,25 @@
     </div>
   </div>
   <div class="form-group">
+    <%= f.label :pet_status, "ペットの種類" %>
+    <div class="form-check">
+      <%= f.radio_button :species, 'dog', class: "form-check-input" %>
+      <%= f.label :犬, class: "form-check-label" %>
+    </div>
+    <div class="form-check">
+      <%= f.radio_button :species, 'cat', class: "form-check-input" %>
+      <%= f.label :猫, class: "form-check-label" %>
+    </div>
+    <div class="form-check">
+      <%= f.radio_button :species, 'bird', class: "form-check-input" %>
+      <%= f.label :鳥, class: "form-check-label" %>
+    </div>
+    <div class="form-check">
+      <%= f.radio_button :species, 'other', class: "form-check-input" %>
+      <%= f.label :その他, class: "form-check-label" %>
+    </div>
+  </div>
+  <div class="form-group">
     <%= f.label :gender, "性別" %>
     <div class="form-check">
       <%= f.radio_button :gender, 'male', class: "form-check-input" %>
