--- a/app/views/public/customer_pets/_info.html.erb
+++ b/app/views/public/customer_pets/_info.html.erb
@@ -32,15 +32,14 @@
     </tr>
   </table>
   <% if current_customer == customer %>
-    <%= link_to "編集する", edit_customer_pet_path, class: "btn btn-outline-info" %>
+    <%= link_to "編集する", edit_customer_pet_path(customer), class: "btn btn-outline-info" %>
+    <%= link_to "削除", customer_pet_path(customer), class:"btn btn-outline-secondary pt-2" %>
   <% end %>
+
 <% else %>
   <!-- ペット情報が登録されていない場合の表示 -->
   <h4 class="mx-auto mt-5">ペット情報はまだ登録されていません。</h4>
-  <% if current_customer == @customer %>
+  <% if current_customer == customer %>
     <%= link_to "ペットを登録する", new_customer_pet_path, class: "btn btn-outline-warning" %>
   <% end %>
 <% end %>
-
-
-
