--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,14 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <div class="d-flex align-items-center">
-        <h4>迷子情報一覧</h4>
-        <div class="ml-3">
-          <% if customer_signed_in? %>
-            <%= link_to "迷子・保護情報を登録", new_pet_post_path, class:"btn btn-outline-danger mb-2" %>
-          <% end %>
-        </div>
-      </div>
+      <h4 class="my-3">迷子情報一覧</h4>
     </div>
     <div class="container">
       <div class="row">
