--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -3,9 +3,7 @@
     <div class="col-md-6 sm-10">
       <h4><%= @customer.name %>さんの詳細ページ</h4>
       <div class="py-3">
-        <%= link_to "参加しているグループ一覧", admin_groups_path, class:"btn btn-outline-secondary mb-2" %><br>
-        <%= link_to "いいねした投稿", admin_pet_posts_path, class:"btn btn-outline-secondary pt-2" %>
-        <%= link_to "#{@customer.name}さんの投稿ページ", admin_pet_posts_path, class:"btn btn-outline-secondary pt-2" %>
+        <%= link_to "#{@customer.name}さんの投稿一覧", pet_posts_admin_customer_path(@customer), class:"btn btn-outline-secondary pt-2" %>
       </div>
       <%=render 'info', customer:  @customer %>
     </div>
