--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav ml-auto">
           <% if customer_signed_in? %>
-            <li class="nav-item"><%= link_to "マイページ", customer_path(current_customer.id), class: "btn btn-light nav-link ml-2" %></li>
+            <li class="nav-item"><%= link_to "迷子・保護情報を登録", new_pet_post_path, class:"btn btn-danger" %></li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 ペット情報一覧
@@ -23,6 +23,7 @@
               </div>
             </li>
             <li class="nav-item"><%= link_to "グループ一覧", groups_path, class: "btn btn-light nav-link ml-2" %></li>
+            <li class="nav-item"><%= link_to "マイページ", customer_path(current_customer.id), class: "btn btn-light nav-link ml-2" %></li>
             <li class="nav-item"><%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn btn-light nav-link ml-2" %></li>
           <% elsif admin_signed_in? %>
             <li class="nav-item"><%= link_to "顧客一覧", admin_customers_path, class: "btn btn-light nav-link ml-2" %></li>
