--- a/app/views/public/customer_pets/edit.html.erb
+++ b/app/views/public/customer_pets/edit.html.erb
@@ -2,11 +2,9 @@
   <div class="row">
     <div class="col-md-10 sm-5">
       <h4 class="my-3 ml-4">ペット情報編集</h4>
-      <%= form_with model: @customer_pet, url: customer_pet_path(@customer_pet), method: :patch do |f| %>
-        <%#= render 'layouts/error', obj: @customer_pet %>
+      <%= form_with model: [@customer, @customer_pet], url: customer_pet_path(@customer, @customer_pet), method: :patch do |f| %>
         <%= render 'form', customer: @customer, customer_pet: @customer_pet, f: f  %>
       <% end %>
-      <%= link_to "削除する", customer_pet_path(@customer, @customer_pet), method: :delete, class: "btn btn-outline-info" %>
     </div>
   </div>
 </div>
