--- a/app/views/searches/keyword_search.html.erb
+++ b/app/views/searches/keyword_search.html.erb
@@ -5,7 +5,7 @@
           <h4 class="my-2">キーワード検索結果</h4>
           <div class="ml-3">
             <% if customer_signed_in? %>
-              <%= link_to "迷子・保護情報を登録", new_pet_post_path, class:"btn btn-outline-danger mb-2" %>
+              <%= link_to "絞り込み検索", root_path, class:"btn btn-outline-secondary mb-2" %>
             <% end %>
           </div>
         </div>
