--- a/app/views/public/customer_pets/_info.html.erb
+++ b/app/views/public/customer_pets/_info.html.erb
@@ -1,45 +1,45 @@
 <% if customer.customer_pets.any? %>
   <h4>ペット情報</h4>
-    <% pet = customer.customer_pets.first %>
-    <table class="table table-bordered">
-    <tr>
-      <td class="bg-light">ペットの画像</td>
-      <td><%= image_tag pet.get_image(500, 500), size: "200x250" %></td>
-    </tr>
-    <tr>
-      <td class="bg-light">ペットの種類</td>
-      <td><%= pet.species_i18n %></td>
-    </tr>
-    <tr>
-      <td class="bg-light">ペットの名前</td>
-      <td><%= pet.name %></td>
-    </tr>
-    <tr>
-      <td class="bg-light">性別</td>
-      <td><%= pet.gender_i18n %></td>
-    </tr>
-    <tr>
-      <td class="bg-light">年齢</td>
-      <td><%= pet.age %></td>
-    </tr>
-    <tr>
-      <td class="bg-light">体重</td>
-      <td><%= pet.weight_i18n %></td>
-    </tr>
-    <tr>
-      <td class="bg-light">特徴</td>
-      <td><%= pet.characteristics %></td>
-    </tr>
-  </table>
-  <% if current_customer == customer %>
-    <%= link_to "編集する", edit_customer_pet_path(customer), class: "btn btn-outline-info" %>
-    <%= link_to "削除", customer_pet_path(customer), class:"btn btn-outline-secondary pt-2" %>
+    <% customer.customer_pets.each do |pet| %>
+      <table class="table table-bordered">
+      <tr>
+        <td class="bg-light">ペットの画像</td>
+        <td><%= image_tag pet.get_image(500, 500), size: "200x250" %></td>
+      </tr>
+      <tr>
+        <td class="bg-light">ペットの種類</td>
+        <td><%= pet.species_i18n %></td>
+      </tr>
+      <tr>
+        <td class="bg-light">ペットの名前</td>
+        <td><%= pet.name %></td>
+      </tr>
+      <tr>
+        <td class="bg-light">性別</td>
+        <td><%= pet.gender_i18n %></td>
+      </tr>
+      <tr>
+        <td class="bg-light">年齢</td>
+        <td><%= pet.age %></td>
+      </tr>
+      <tr>
+        <td class="bg-light">体重</td>
+        <td><%= pet.weight_i18n %></td>
+      </tr>
+      <tr>
+        <td class="bg-light">特徴</td>
+        <td><%= pet.characteristics %></td>
+      </tr>
+    </table>
+    <% if current_customer == customer %>
+      <%= link_to "編集する", edit_customer_customer_pet_path(customer, pet), class: "btn btn-outline-info" %>
+      <%= link_to "削除", customer_customer_pet_path(customer, pet), data: { confirm: "本当に削除しますか？" }, method: :delete, class:"btn btn-outline-secondary pt-2" %>
+    <% end %>
   <% end %>
-
 <% else %>
   <!-- ペット情報が登録されていない場合の表示 -->
   <h4 class="mx-auto mt-5">ペット情報はまだ登録されていません。</h4>
   <% if current_customer == customer %>
-    <%= link_to "ペットを登録する", new_customer_pet_path, class: "btn btn-outline-warning" %>
+    <%= link_to "ペットを登録する", new_customer_customer_pet_path(customer, customer_pet), class: "btn btn-outline-warning" %>
   <% end %>
 <% end %>
