--- a/app/views/public/customer_pets/edit.html.erb
+++ b/app/views/public/customer_pets/edit.html.erb
@@ -2,8 +2,12 @@
   <div class="row">
     <div class="col-md-10 sm-5">
       <h4 class="my-3 ml-4">ペット情報編集</h4>
-      <%= form_with model: [@customer, @customer_pet], url: customer_pet_path(@customer, @customer_pet), method: :patch do |f| %>
+      <%= form_with model: [@customer, @customer_pet], url: customer_customer_pet_path(@customer, @customer_pet), method: :patch do |f| %>
+        <%= render 'layouts/error', obj: @customer_pet %>
         <%= render 'form', customer: @customer, customer_pet: @customer_pet, f: f  %>
+        <div class="form-group">
+        <%= f.submit "変更を保存", class: "btn btn-outline-secondary" %>
+        </div>
       <% end %>
     </div>
   </div>
