--- a/app/views/public/pet_posts/new.html.erb
+++ b/app/views/public/pet_posts/new.html.erb
@@ -2,9 +2,17 @@
   <div class="row">
     <div class="col-md-8 sm-5 mx-auto">
       <h4 class="my-3 ml-4">保護迷子情報新規登録</h4>
-      
-        <%= render 'form', customer: @customer, pet_post: @pet_post %>
-     
+      <%= render 'layouts/error', obj: @pet_post %>
+      <%= form_with model: @pet_post, url: pet_posts_path, method: :post do |f| %>
+        <%= render 'form', customer: @customer, pet_post: @pet_post, f: f %>
+        <div class="form-group">
+          <%= f.label :tag_name, "タグ(半角スペースで複数個登録できます)" %>
+          <%= f.text_field :tag_name, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.submit "新規登録", class: "btn btn-outline-secondary" %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
