--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -5,9 +5,10 @@
       <div class="py-3">
         <%= link_to "#{@customer.name} さんがリアクションした投稿", customer_customers_sighting_pet_posts_path(@customer), class:"btn btn-outline-secondary pt-2" %>
         <%= link_to "#{@customer.name} さんの投稿", pet_posts_customer_path(@customer), class:"btn btn-outline-secondary pt-2" %>
+        <%= render 'dm', customer: @customer, isRoom: @isRoom, roomId: @roomId, room: @room, entry: @entry %>
       </div>
       <% if current_customer == @customer %>
-        <%=render 'info', customer:  @customer %>
+        <%= render 'info', customer:  @customer %>
        <% end %>
     </div>
 
