--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,6 +25,14 @@
             <li class="nav-item"><%= link_to "グループ一覧", groups_path, class: "btn btn-light nav-link ml-2" %></li>
             <li class="nav-item"><%= link_to "マイページ", customer_path(current_customer.id), class: "btn btn-light nav-link ml-2" %></li>
             <li class="nav-item"><%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn btn-light nav-link ml-2" %></li>
+            <li class="nav-item"><%= link_to notifications_path, class: "nav-link" do %>
+              <% if current_customer.notifications.where(read: false).exists? %>
+                <i class="fa-sharp fa-solid fa-bell fa-beat" style="color: #f2ee7d;"></i>
+              <% else %>
+                <i class="fa-sharp fa-solid fa-bell"></i>
+              <% end %>
+            <% end %>
+            </li>
           <% elsif admin_signed_in? %>
             <li class="nav-item"><%= link_to "顧客一覧", admin_customers_path, class: "btn btn-light nav-link ml-2" %></li>
             <li class="nav-item dropdown">
