--- a/app/views/public/notifications/index.html.erb
+++ b/app/views/public/notifications/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Public::Notifications#index</h1>
-<p>Find me in app/views/public/notifications/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+       <h4>通知</h4>
+        <% if @notifications.present? %>
+          <% @notifications.each do |notification| %>
+              <%= render "#{notification.action_type}", notification: notification %>
+          <% end %>
+        <% else %>
+          通知はありません
+        <% end %>
+    </div>
+  </div>
+  <div class="mx-auto mt-3">
+    <%= paginate @notifications %>
+  </div>
+</div>
