--- a/app/views/public/comments/_form.html.erb
+++ b/app/views/public/comments/_form.html.erb
@@ -1,3 +1,4 @@
+<%= alert %>
 <%= form_with model: [pet_post, comment] do |f| %>
   <%= f.text_area :comment, rows: '6', class: "w-100",  placeholder: "コメントをここに" %>
   <%= f.submit "送信する" %>
