--- a/app/views/public/pet_posts/show.html.erb
+++ b/app/views/public/pet_posts/show.html.erb
@@ -2,6 +2,6 @@
   <div class="my-3 mx-auto">
     <h4>詳細ページ</h4>
   </div>
-      <%= render 'detail', pet_post: @pet_post, pet_post_tags: @pet_post_tags, comment: @comment %>
+      <%= render 'public/pet_posts/detail', pet_post: @pet_post, pet_post_tags: @pet_post_tags, comment: @comment %>
       <%= render 'layouts/error', obj: @comment %>
 </div>
