--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -8,6 +8,7 @@
       <%=render 'info', customer:  @customer %>
     </div>
     <div class="col-md-5 offset-md-1 sm-10">
+      <%=render 'admin/customer_pets/info', customer:  @customer, customer_pet: @customer_pet %>
     </div>
   </div>
 </div>
