--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-md-10 sm-5">
       <h4 class="my-3 ml-4">会員情報編集</h4>
+      <%= render 'layouts/error', obj: @customer %>
       <%=render 'form', customer:  @customer %>
     </div>
   </div>
