--- a/app/views/public/groups/index.html.erb
+++ b/app/views/public/groups/index.html.erb
@@ -7,7 +7,7 @@
     <div class="col-md-4">
       <%= link_to "グループを作成する", new_group_path, class: "btn btn-info float-right" %>
     </div>
-      <%= render 'index', groups: @groups %>
+      <%= render 'index', groups: @groups, customers: @customers %>
     </div>
   </div>
 </div>
