--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,11 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="d-flex flex-column vh-100">
     <header>
       <%= render 'layouts/header' %>
     </header>
-    <main>
+    <main class="mb-auto">
     <% if flash[:alert] %>
       <div class="alert alert-danger">
       <%= flash[:alert] %>
