--- a/app/views/public/customer_pets/_form.html.erb
+++ b/app/views/public/customer_pets/_form.html.erb
@@ -46,7 +46,7 @@
 </div>
 <div class="form-group">
   <%= f.label :weight, "体重" %>
-  <%= f.select :weight, CustomerPet.weights.keys.map { |key| [t("enums.weight_i18n.#{key}"), key] }, {}, class: "form-control" %>
+   <%= f.select :weight, CustomerPet.weights.keys.map { |key| [I18n.t("enums.pet_post.weight.#{key}"), key] }, {}, class: "form-control" %>
 </div>
 <div class="form-group">
   <%= f.label :characteristics, "特徴" %>
