--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h4 class="my-3">迷子情報一覧</h4>
+      <h4 class="my-3">迷子情報一覧(新着順)</h4>
     </div>
     <div class="container">
       <div class="row">
