--- a/app/views/public/pet_posts/_form.html.erb
+++ b/app/views/public/pet_posts/_form.html.erb
@@ -53,7 +53,7 @@
 </div>
 <div class="form-group">
   <%= f.label :weight, "体重" %>
-  <%= f.select :weight, CustomerPet.weights.keys.map { |key| [t("enums.weight#{key}"), key] }, {}, class: "form-control" %>
+  <%= f.select :weight, CustomerPet.weights.keys.map { |key| [I18n.t("enums.pet_post.weight.#{key}"), key] }, {}, class: "form-control" %>
 </div>
 <div class="form-group">
   <%= f.label :prefecture, "都道府県" %>
