--- a/app/views/public/pet_posts/_list.html.erb
+++ b/app/views/public/pet_posts/_list.html.erb
@@ -19,7 +19,12 @@
             <%= pet_post.sightings.count %> 件の目撃
         <% end %>
         <p><%= link_to "#{pet_post.comments.count} 件のコメント", pet_post_path(pet_post.id) %></p>
+      <% else %>
+        <%= pet_post.sightings.count %> 件の目撃
+        <p><%= "#{pet_post.comments.count} 件のコメント" %></p>
       <% end %>
+
+
         <div style="height: 80px;">
           <p>場所 :  <b><%= pet_post.prefecture %><%= pet_post.area %>付近</b></p>
           <p><% pet_post.tags.each do |tag|%>
