--- a/app/views/admin/pet_posts/index.html.erb
+++ b/app/views/admin/pet_posts/index.html.erb
@@ -1,10 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col">
-        <div class="d-flex align-items-center">
-          <h4 class="my-2">保護情報一覧</h4>
-        </div>
-      </div>
+      <h4 class="my-2">保護情報一覧(新着順)</h4>
+    </div>
       <div class="container">
           <div class="row">
               <% @pet_posts.each do |pet_post| %>
