--- a/app/views/public/customer_pets/_info.html.erb
+++ b/app/views/public/customer_pets/_info.html.erb
@@ -5,7 +5,7 @@
       <table class="table table-bordered">
       <tr>
         <td class="bg-light">ペットの画像</td>
-        <td><%= image_tag pet.get_image(500, 500), size: "200x250" %></td>
+        <td><%= image_tag pet.get_image(500, 500), style: "object-fit: cover; width: 250px; height: 250px;" %></td>
       </tr>
       <tr>
         <td class="bg-light">ペットの種類</td>
