--- a/app/views/public/pet_posts/_detail.html.erb
+++ b/app/views/public/pet_posts/_detail.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col col-md-4 d-flex align-items-center">
-    <%= image_tag pet_post.get_image(500, 500), size: "350x250", class: "rounded mx-auto d-block" %>
+    <%= image_tag pet_post.get_image(500, 500), class: "rounded mx-auto d-block", style: "object-fit: cover; height: 250px;" %>
   </div>
 
   <div class="col col-md-7 offset-md-1">
