--- a/app/views/public/pet_posts/_form.html.erb
+++ b/app/views/public/pet_posts/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="form-group">
   <%= f.label :image, "ペット画像" %>
-  <%= f.file_field :image, accept: "image/*" %>
+  <%= f.file_field :image, accept: "image/*", class: "form-control-file" %>
 </div>
 <div class="form-group">
   <%= f.label :pet_status, "ペット状況" %>
