--- a/app/views/public/pet_posts/index.html.erb
+++ b/app/views/public/pet_posts/index.html.erb
@@ -5,8 +5,14 @@
     </div>
     <div class="container">
       <div class="row">
-        <% @pet_posts.each do |pet_post| %>
-          <%= render 'list', pet_post: pet_post %>
+        <% if @pet_posts.present? %>
+          <% @pet_posts.each do |pet_post| %>
+            <%= render 'list', pet_post: pet_post %>
+          <% end %>
+        <% else %>
+          <div class="d-flex align-items-center mx-auto" style="height: 300px;">
+            <h4 class="text-center">保護情報は登録されておりません</h4>
+          </div>
         <% end %>
       </div>
     </div>
