--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
     <%= link_to root_path, class: "mx-0" do %>
       <%= image_tag "logo.png", alt: "LOGO", size: "280x80" %>
     <% end %>
-    <div class="d-flex flex-column">
+    <div class="d-flex flex-column ml-auto" >
       <button class="navbar-toggler" type="button" data-toggle="collapse"
         data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -12,9 +12,9 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav ml-auto">
           <% if customer_signed_in? %>
-            <li class="nav-item"><%= link_to "迷子・保護情報を登録", new_pet_post_path, class:"btn btn-danger" %></li>
+            <li class="nav-item ml-auto"><%= link_to "迷子・保護情報を登録", new_pet_post_path, class:"btn btn-danger" %></li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="nav-link dropdown-toggle btn btn-light ml-2" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 ペット情報一覧
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
