--- a/app/views/public/groups/index.html.erb
+++ b/app/views/public/groups/index.html.erb
@@ -1,13 +1,22 @@
-<div class='container px-5 px-sm-0'>
-  <%= flash[:notice] %>
-  <div class='row'>
-    <div class="col-md-8">
-      <h2>グループ一覧</h2>
+<div class='container'>
+  <div class='row justify-content-center'>
+    <div class="col">
+      <div class="d-flex align-items-center">
+        <h4 class="my-4 ml-5">グループ一覧</h4>
+        <div class="ml-3">
+          <%= link_to "グループを作成する", new_group_path, class: "btn btn-outline-info float-right" %>
+        </div>
+      </div>
     </div>
-    <div class="col-md-4">
-      <%= link_to "グループを作成する", new_group_path, class: "btn btn-info float-right" %>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-10 col-sm-8 my-3">
+          <%= render 'index', groups: @groups, customers: @customers %>
+        </div>
+      </div>
     </div>
-      <%= render 'index', groups: @groups, customers: @customers %>
+    <div class="mx-auto mt-3">
+      <%= paginate @groups %>
     </div>
   </div>
 </div>
