--- a/app/views/public/groups/show.html.erb
+++ b/app/views/public/groups/show.html.erb
@@ -29,7 +29,7 @@
             </td>
             <td>
               <% if @group.is_owned_by?(current_customer) %>
-　　            <%= link_to '編集', edit_group_path(@group), class: "btn btn-sm btn-success" %>
+　　            <%= link_to '編集', edit_group_path(@group), class: "btn btn-sm btn-outline-info" %>
               <% elsif @group.includesCustomer?(current_customer)%>
 　　            <%= link_to '抜ける', group_group_members_path(@group), method: :delete, class: "btn btn-sm btn-danger" %>
               <% else %>
