--- a/app/views/searches/keyword_search.html.erb
+++ b/app/views/searches/keyword_search.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="row">
     <div class="col">
-        <div class="d-flex align-items-center">
-          <h4 class="my-2">キーワード検索結果</h4>
-          <div class="ml-3">
-            <% if customer_signed_in? %>
-              <%= link_to "絞り込み検索をする", new_search_path, class:"btn btn-outline-secondary mb-2" %>
-            <% end %>
-          </div>
+      <div class="d-flex align-items-center">
+        <h4 class="my-3">キーワード検索結果</h4>
+        <div class="ml-3">
+          <% if customer_signed_in? %>
+            <%= link_to "絞り込み検索をする", new_search_path, class:"btn btn-outline-secondary mb-2" %>
+          <% end %>
         </div>
+      </div>
     </div>
     <div class="container">
       <div class="row">
@@ -17,13 +17,12 @@
             <%= render 'public/pet_posts/list', pet_post: pet_post %>
           <% end %>
         <% else %>
-          <div class="d-flex align-items-center justify-content-center" style="height: 300px;">
+          <div class="d-flex align-items-center mx-auto" style="height: 300px;">
             <h4 class="text-center">一致する検索結果はありません</h4>
           </div>
         <% end %>
       </div>
     </div>
-
     <div class="mx-auto mt-3">
       <%= paginate @pet_posts %>
     </div>
