--- a/app/views/public/groups/index.html.erb
+++ b/app/views/public/groups/index.html.erb
@@ -4,7 +4,7 @@
       <div class="d-flex align-items-center">
         <h4 class="my-4 ml-5">グループ一覧</h4>
         <div class="ml-3">
-          <%= link_to "グループを作成する", new_group_path, class: "btn btn-outline-info float-right" %>
+          <%= link_to "グループを作成する", new_group_path, class: "btn btn-outline-primary float-right" %>
         </div>
       </div>
     </div>
