--- a/app/views/public/pet_posts/_list.html.erb
+++ b/app/views/public/pet_posts/_list.html.erb
@@ -30,7 +30,7 @@
              <% end %>
           </p>
         </div>
-        <%= link_to pet_post_path(pet_post.id), class: "btn btn-outline-warning" do %>
+        <%= link_to pet_post_path(pet_post.id), class: "btn btn-warning" do %>
           詳細を見る
         <% end %>
       </div>
