--- a/app/views/public/pet_posts/_detail.html.erb
+++ b/app/views/public/pet_posts/_detail.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col col-md-4 d-flex align-items-center">
-    <%= image_tag pet_post.get_image(500, 500), class: "rounded mx-auto d-block", style: "object-fit: cover; height: 250px;" %>
+  <div class="col col-md-4 col-sm-8 d-flex align-items-center mx-auto">
+    <%= image_tag pet_post.get_image(500, 500), class: "rounded mx-auto d-block", style: "object-fit: cover; width: 320px;" %>
   </div>
 
-  <div class="col col-md-7 offset-md-1">
+  <div class="col col-md-7 col-sm-8 offset-md-1 mx-auto">
     <div class="d-flex align-items-center">
       <h4>詳細情報</h4>
       <% if current_customer == pet_post.customer %>
