--- a/app/views/public/customers/_form.html.erb
+++ b/app/views/public/customers/_form.html.erb
@@ -13,7 +13,7 @@
       </td>
     </tr>
     <tr>
-      <td>郵便番号</td>
+      <td>郵便番号(ハイフンなし)</td>
       <td>
         <%= f.text_field :postcode, class: "form-control" %>
       </td>
