--- a/app/views/public/customers/_info.html.erb
+++ b/app/views/public/customers/_info.html.erb
@@ -22,5 +22,5 @@
 </table>
 
 <% unless customer.is_guest? %>
-  <%= link_to "編集する",  edit_customer_path, class: "btn btn-outline-info" %>
+  <%= link_to "編集する",  edit_customer_path, class: "btn btn-outline-secondary" %>
 <% end %>
