--- a/app/views/public/groups/edit.html.erb
+++ b/app/views/public/groups/edit.html.erb
@@ -1,10 +1,17 @@
 <div class='container'>
   <div class='row'>
-    <div class="col-sm-12 col-md-8 px-sm-0 mx-auto">
-      <h3>グループ編集</h3>
+    <div class="col-md-8 sm-5 mx-auto">
+      <h4 class="my-4 ml-4">グループ編集</h4>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 sm-8 mx-auto">
       <%= form_with model: @group, url: group_path, method: :patch, local: true do |f| %>
         <%= render 'layouts/error', obj: @group %>
         <%= render 'form', f: f %>
       <% end %>
+    </div>
   </div>
 </div>
