--- a/app/views/public/groups/_form.html.erb
+++ b/app/views/public/groups/_form.html.erb
@@ -1,19 +1,15 @@
-
 <div class="form-group">
-  <%= f.label :エリア名 %>
+  <%= f.label :"エリア名(グループ名)" %>
   <%= f.text_field :name, class: 'form-control' %>
 </div>
-
 <div class="form-group">
-  <%= f.label :紹介文 %>
+  <%= f.label :"紹介文(20文字以内)" %>
   <%= f.text_area :introduction, class: 'form-control' %>
 </div>
-
-<div class="form-group">
+<div class="form-group mb-4">
   <%= f.label :グループ画像 %>
   <%= f.file_field :group_image, class: "form-control-file" , accept: "image/*" %>
 </div>
-
 <div class="form-group">
-  <%= f.submit class: 'btn btn-info' %>
+  <%= f.submit class: 'btn btn-outline-primary' %>
 </div>
