--- a/app/views/public/groups/new.html.erb
+++ b/app/views/public/groups/new.html.erb
@@ -1,7 +1,13 @@
 <div class='container'>
   <div class='row'>
-    <div class="col-sm-12 col-md-8 px-sm-0 mx-auto">
-      <h3>グループ作成</h3>
+    <div class="col-md-8 sm-5 mx-auto">
+      <h4 class="my-4 ml-4">グループ作成</h4>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 sm-8 mx-auto">
       <%= form_with model: @group, url: groups_path, method: :post, local: true do |f| %>
         <%= render 'layouts/error', obj: @group %>
         <%= render 'form', f: f %>
