--- a/app/views/public/pet_posts/edit.html.erb
+++ b/app/views/public/pet_posts/edit.html.erb
@@ -2,23 +2,23 @@
   <div class="row">
     <div class="col-md-8 sm-5 mx-auto">
       <h4 class="my-4 ml-4">投稿編集ページ</h4>
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12 sm-8 mx-auto">
-              <%= render 'layouts/error', obj: @pet_post %>
-              <%= form_with model: @pet_post, url: pet_post_path, method: :patch do |f| %>
-              <%= render 'form', customer: @customer, pet_post: @pet_post, f: f %>
-                <div class="form-group">
-                  <%= f.label :tag_name, "タグ(半角スペースで複数個登録できます)" %>
-                  <%= f.text_field :tag_name, value: @pet_post_tags, class: 'form-control' %>
-                </div>
-                <div class="form-group">
-                  <%= f.submit "更新する", class: "btn btn-outline-secondary" %>
-                </div>
-              <% end %>
-          </div>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 sm-8 mx-auto">
+      <%= render 'layouts/error', obj: @pet_post %>
+      <%= form_with model: @pet_post, url: pet_post_path, method: :patch do |f| %>
+      <%= render 'form', customer: @customer, pet_post: @pet_post, f: f %>
+        <div class="form-group mb-4">
+          <%= f.label :tag_name, "タグ(半角スペースで複数個登録できます)" %>
+          <%= f.text_field :tag_name, value: @pet_post_tags, class: 'form-control' %>
         </div>
-      </div>
+        <div class="form-group">
+          <%= f.submit "更新する", class: "btn btn-outline-secondary" %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
