--- a/app/views/searches/_form.html.erb
+++ b/app/views/searches/_form.html.erb
@@ -30,7 +30,7 @@
   <%= f.label :area, "詳細住所(キーワード検索)" %>
   <%= f.search_field :area_cont, class: "form-control", placeholder: "エリアのキーワードを入力。例:大宮" %>
 </div>
-<div class="form-group">
+<div class="form-group mb-4">
     <%= label_tag :occurred_on, "発生日範囲を選択" %>
     <div class="form-inline">
       <%= f.date_field :occurred_on_gteq, class: "form-control", style: "width: 300px;" %>
