--- a/app/views/admin/groups/index.html.erb
+++ b/app/views/admin/groups/index.html.erb
@@ -5,5 +5,8 @@
     </div>
       <%= render 'index', groups: @groups %>
     </div>
+     <div class="mx-auto mt-3">
+      <%= paginate @groups %>
+    </div>
   </div>
 </div>
