--- a/app/views/searches/detail.html.erb
+++ b/app/views/searches/detail.html.erb
@@ -5,30 +5,27 @@
           <h4 class="my-2">絞り込み検索結果</h4>
           <div class="ml-3">
             <% if customer_signed_in? %>
-              <%= link_to "絞り込み検索", new_search_path, class:"btn btn-outline-secondary" %>
+              <%= link_to "絞り込み検索", new_search_path, class:"btn btn-outline-secondary mb-2" %>
             <% end %>
           </div>
         </div>
     </div>
-  </div>
-
-<div class="container">
-  <div class="row">
-    <% if @pet_posts.present? %>
-      <% @pet_posts.each do |pet_post| %>
-        <%= render 'public/pet_posts/list', pet_post: pet_post %>
-      <% end %>
-    <% else %>
-      <div class="d-flex align-items-center justify-content-center" style="height: 300px;">
-        <h4 class="text-center">一致する検索結果はありません</h4>
+    <div class="container">
+      <div class="row">
+        <% if @pet_posts.present? %>
+          <% @pet_posts.each do |pet_post| %>
+            <%= render 'public/pet_posts/list', pet_post: pet_post %>
+          <% end %>
+        <% else %>
+          <div class="d-flex align-items-center justify-content-center" style="height: 300px;">
+            <h4 class="text-center">一致する検索結果はありません</h4>
+          </div>
+        <% end %>
       </div>
-    <% end %>
+    </div>
 
-  </div>
-  <div class="mx-auto mt-3">
+    <div class="mx-auto mt-3">
       <%= paginate @pet_posts %>
+    </div>
   </div>
-
 </div>
-
-
